--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
 这是我的第一个php  socket项目，最近一直在找工作，哎！！找个养家挣钱的工作容易，但是找一个自己爱干的真是不容易，继续找。。。。
-，最近在招聘网站上面php工程师任职要求好几个都有说道socket编程，所以在网上找了个demo看了看
+最近在招聘网站上面php工程师任职要求好几个都有说道socket编程，所以在网上找了个demo看了看
